# mt

./: .cspell.json  .gitignore  .licensee.json  .markdownlint-cli2.jsonc  .mt.json  .n-cursor.json  .n-rules.json  .oxlintrc.json  .v8rignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  hk.pkl  knip.json  package.json  vitest.config.mjs
.changes/: 260722-1412.md  260722-1502.md  260722-1638.md
.claude/: settings.json
.cursor/rules/: n-ci4.mdc  n-feedback.mdc  n-js-run.mdc  n-js.mdc  n-npm-module.mdc
.github/workflows/: lint-ga.yml  lint-text.yml  npm-publish.yml
crates/agent-cli/: Cargo.toml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: acp.rs  agent.rs  approval_tool.rs  fs_tools.rs  lib.rs  provider.rs  provider_openai.rs  tools.rs
crates/agent-core/src/docs/: acp.md  agent.md  approval_tool.md  fs_tools.md  index.md  lib.md  provider.md  provider_openai.md  tools.md
crates/agent-server/: Cargo.toml
crates/mt-core/: Cargo.toml
crates/mt-napi/: CHANGELOG.md  package.json
docs/: index.en.md  index.md  layers.json  log.md  omlx-ua-docs-bench.py  roadmap.en.md  spec-npm-three-packages.md  spec-scanner-rust-integration.md  spec-task-create-rust-integration.md  vision.md
docs/adr/: 20260601-213006-worktrees-gitignore-sync-крок.md  20260601-220027-coverage-gate-scoped-changed-від-base-commit.md  20260601-221214-гарантія-worktrees-у-gitignore-через-окремий-sync-крок.md  20260601-222015-scope-coverage-гейту-в-defaultgates-до-змінених-файлів-через.md  20260602-063622-зберігання-flow-стану-як-sibling-файлу-поряд-із-worktree-дир.md  20260602-063710-c893caa2.md  20260602-071744-scope-flow-турнікета-через-changed.md  20260602-092725-flow-стан-як-sibling-файл-поруч-з-worktree-директорією.md  20260602-092725-mt-init-ідемпотентна-ініціалізація.md  20260602-093342-flow-init-як-надмножина-worktree-add-ізоляція-flow-стан.md  20260602-093821-відносна-резолюція-лінків-та-info-поле-flow-у-trace-mjs.md  20260602-094000-flow-init-ідемпотентна-ініціалізація-стану-у-вже-існуючому-w.md  20260602-094451-видалення-version-changelog-перевірок-з-packagestructure-mjs.md  20260602-095311-trace-mjs-резолвинг-лінків-front-matter-відносно-теки-артефа.md  20260603-145928-6fe23dd0.md  (+190 more)
layers/: CHANGELOG.md  package.json
npm/: CHANGELOG.md  README.md  index.js  package.json  stryker.config.mjs
relay/: CHANGELOG.md  package.json
scanner/: Cargo.toml
scanner/src/: lib.rs  main.rs
src/: lib.rs
tests/: docs.test.mjs
(+321 files in other folders)
