[workspace]
members = ["crates/mt-core", "crates/mt-cli", "crates/mt-napi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "ISC"
repository = "https://github.com/nitra/mt"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tempfile = "3"
