[package]
name = "mt-scanner"
version = "0.1.0"
edition = "2021"
description = "Read-only file-system scanner for @7n/mt task graphs"
license = "ISC"
repository = "https://github.com/nitra/mt"

[[bin]]
name = "mt-scanner"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"
